methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: '=' expected but ';' found.
  while (seenBaggle==false){
^MethodsReturning:5: error: ';' expected but ',' found.
    right(),
           ^MethodsReturning:11: error: ';' expected but ')' found.
        seenBaggle= true)
                        ^